@@ -1,10 +1,13 @@
 package com.example.api.exception;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import graphql.ExceptionWhileDataFetching;
 import graphql.GraphQLError;
+import graphql.execution.DataFetcherExceptionHandler;
 import graphql.kickstart.execution.error.GraphQLErrorHandler;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
+import org.springframework.web.servlet.HandlerInterceptor;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -17,18 +20,18 @@ import java.util.stream.Collectors;
 public class CustomGraphQLErrorHandler implements GraphQLErrorHandler {
     @Override
     public List<GraphQLError> processErrors(List<GraphQLError> errors) {
-        log.info("Errors:  {}", errors);
+        log.info("processErrors Errors:  {}", errors);
 
-        if (!errors.isEmpty()) {
-            errors.stream().forEach(graphQLError -> {
-                log.info("Error type:  {}", graphQLError.getErrorType());
-                log.info("Error message:  {}", graphQLError.getMessage());
-                log.info("Error path:  {}", graphQLError.getPath());
-                log.info("Error locations:  {}", graphQLError.getLocations());
-            });
-        }
+        //        if (!errors.isEmpty()) {
+        //            errors.stream().forEach(graphQLError -> {
+        //                log.info("Error type:  {}", graphQLError.getErrorType());
+        //                log.info("Error message:  {}", graphQLError.getMessage());
+        //                log.info("Error path:  {}", graphQLError.getPath());
+        //                log.info("Error locations:  {}", graphQLError.getLocations());
+        //            });
+        //        }
         return errors;
-        //return errors.stream().map(this::getNested).collect(Collectors.toList());
+        //return errors.stream().map(this::getNested).toList();
     }
 
     private GraphQLError getNested(GraphQLError error) {
